# quadprogpp-rs

./: .envrc  .gitmodules  Cargo.toml  katex_header.html
.github/workflows/: ci.yml
quadprogpp/: Cargo.toml
quadprogpp-sys/: .clang-format  Cargo.toml  build.rs
quadprogpp-sys/include/: wrapper.hpp
quadprogpp-sys/src/: lib.rs
quadprogpp/src/: lib.rs
