[package]
name = "quadprogpp-sys"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Raw FFI bindings to QuadProg++"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
approx = "0.5.0"

[features]
trace-solver = []
