[package]
name = "quadprogpp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
quadprogpp-sys = { version = "0.1", path = "../quadprogpp-sys" }

[dev-dependencies]
approx = "0.5.0"
